--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "export": "next build && next export && touch out/.nojekyll && node ./scripts/generate-sitemap"
   },
   "dependencies": {
     "@fontsource/inter": "4.5.2",
