--- a/.github/workflows/.github-actions-main.yml
+++ b/.github/workflows/.github-actions-main.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: 16
       - run: npm install --legacy-peer-deps
+      - run: node ./scripts/generate-sitemap
       - run: npm run export
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
