--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
+    "maplibre-gl": "^2.4.0",
     "mdx-bundler": "^8.0.0",
     "next": "12.1.4",
     "next-themes": "^0.0.14",
+    "pmtiles": "^2.7.0",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
     "react": "17.0.2",
